# ChimiEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Core/: CMakeLists.txt
Core/Private/: CmApplication.cpp
Core/Private/ECS/: CmEntity.cpp  CmNode.cpp  CmScene.cpp  CmUUID.cpp
Core/Private/ECS/Component/: CmLookAtCameraComponent.cpp
Core/Private/ECS/System/: CmBaseMaterialSystem.cpp  CmMaterialSystem.cpp  CmUnlitMaterialSystem.cpp
Core/Private/Render/: CmMaterial.cpp  CmMesh.cpp  CmRenderContext.cpp  CmRenderTarget.cpp  CmRenderer.cpp  CmSampler.cpp  CmTexture.cpp
Core/Public/: CmApplication.h  CmApplicationContext.h  CmEntryPoint.h
Core/Public/ECS/: CmComponent.h  CmEntity.h  CmNode.h  CmScene.h  CmSystem.h  CmUUID.h
Core/Public/ECS/Component/: CmLookAtCameraComponent.h  CmTransformComponent.h
Core/Public/ECS/Component/Material/: CmBaseMaterialComponent.h  CmMaterialComponent.h  CmUnlitMaterialComponent.h
Core/Public/ECS/System/: CmBaseMaterialSystem.h  CmMaterialSystem.h  CmUnlitMaterialSystem.h
Core/Public/Render/: CmMaterial.h  CmMesh.h  CmRenderContext.h  CmRenderTarget.h  CmRenderer.h  CmSampler.h  CmTexture.h
Editor/: CMakeLists.txt
Platform/: CMakeLists.txt
Platform/Private/: CmGeometryUtil.cpp  CmGraphicContext.cpp  CmLog.cpp  CmWindow.cpp
Platform/Private/Event/: CmEventDispatcher.cpp
Platform/Private/Graphic/: CmVKBuffer.cpp  CmVKCommandBuffer.cpp  CmVKDescriptorSet.cpp  CmVKDevice.cpp  CmVKFrameBuffer.cpp  CmVKGraphicContext.cpp  CmVKImage.cpp  CmVKImageView.cpp  CmVKPipeline.cpp  CmVKQueue.cpp  CmVKRenderPass.cpp  CmVKSwapchain.cpp
Platform/Private/Window/: CmGLFWwindow.cpp
Platform/Public/: CmEngine.h  CmFileUtil.h  CmGeometryUtil.h  CmGraphicContext.h  CmLog.h  CmWindow.h
Platform/Public/Event/: CmEvent.h  CmEventDispatcher.h  CmEventObserver.h  CmKeyEvent.h  CmMouseEvent.h  CmWindowEvent.h
Platform/Public/Graphic/: CmVKBuffer.h  CmVKCommandBuffer.h  CmVKCommon.h  CmVKDescriptorSet.h  CmVKDevice.h  CmVKFrameBuffer.h  CmVKGraphicContext.h  CmVKImage.h  CmVKImageView.h  CmVKPipeline.h  CmVKQueue.h  CmVKRenderPass.h  CmVKSwapchain.h
Platform/Public/Window/: CmGLFWwindow.h
Resource/Shader/: 00_hello_triangle.frag  00_hello_triangle.vert  01_hello_buffer.frag  01_hello_buffer.frag.spv  01_hello_buffer.vert  01_hello_buffer.vert.spv  02_descriptor_set.frag  02_descriptor_set.vert  03_unlit_material.frag  03_unlit_material.frag.spv  03_unlit_material.vert  03_unlit_material.vert.spv
Sample/: CMakeLists.txt
Sample/00_FirstTriangle/: CMakeLists.txt  Main.cpp
Sample/SandBox/: CMakeLists.txt  CmEventTesting.cpp  CmEventTesting.h  Main.cpp
app/sandbox/: CMakeLists.txt
app/sandbox/src/: SandboxMeshes.cpp  SandboxMeshes.h  SandboxScene.cpp  SandboxScene.h  SandboxSceneController.cpp  SandboxSceneController.h  main.cpp
cmake/: Dependencies.cmake
engine/: CMakeLists.txt
engine/core/: Assert.cpp  Assert.h  Log.cpp  Log.h
engine/platform/: Window.cpp  Window.h
engine/renderer/: MeshData.h  MeshLibrary.cpp  MeshLibrary.h  RenderPacket.h  Renderer.cpp  Renderer.h  SceneExtraction.cpp  SceneExtraction.h
engine/rhi/vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanFrameContext.cpp  VulkanFrameContext.h  VulkanFrameRecording.cpp  VulkanFrameRecording.h  VulkanInstance.Buffer.cpp  VulkanInstance.Device.cpp  VulkanInstance.Geometry.cpp  VulkanInstance.Swapchain.cpp  VulkanInstance.Triangle.cpp  VulkanInstance.cpp  VulkanInstance.h  VulkanMeshBuffer.cpp  VulkanMeshBuffer.h  VulkanMeshCache.cpp  VulkanMeshCache.h  VulkanMeshPass.cpp  VulkanMeshPass.h  VulkanMeshPipeline.cpp  VulkanMeshPipeline.h  VulkanShaderLoader.cpp  VulkanShaderLoader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanUploadContext.cpp  VulkanUploadContext.h
engine/scene/: Scene.cpp  Scene.h
shaders/: mesh.frag  mesh.vert  triangle.vert
